i fix bug in mobile device
there is an overlap in pictures in mobile but now its ok

--- a/style.css
+++ b/style.css
@@ -56,14 +56,14 @@ body{
 .productContainer{
     margin:20px;
     text-align:center;
-    width: 400px;
+    width: 30rem;
     height: auto;
     background-color: rgba(0, 0, 255, 0.089);
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.216), 10px 10px 10px rgba(0, 0, 0, 0.116),15px 15px 15px rgba(0, 0, 0, 0.016);
     
 }
 .picture{
-    width: 400px;
+    width: 100%;
     position: relative;
 }
 .picture img{
